bdr.BDR.scala.error
Compilation error:
BDR:4: error: value update is not a member of String
    if (litMessage()=R){
        ^BDR:4: error: not found: value R
    if (litMessage()=R){
                     ^BDR:8: error: value update is not a member of String
    if (litMessage()=L) {
        ^BDR:8: error: not found: value L
    if (litMessage()=L) {
                     ^BDR:12: error: value update is not a member of String
    if (litMessage()=I) {
        ^BDR:12: error: not found: value I
    if (litMessage()=I) {
                     ^BDR:16: error: value update is not a member of String
    if (litMessage()=A) {
        ^BDR:16: error: not found: value A
    if (litMessage()=A) {
                     ^BDR:19: error: value update is not a member of String
    if (litMessage()=B) {
        ^BDR:19: error: not found: value B
    if (litMessage()=B) {
                     ^BDR:22: error: value update is not a member of String
    if (litMessage()=C) {
        ^BDR:22: error: not found: value C
    if (litMessage()=C) {
                     ^BDR:25: error: value update is not a member of String
    if (litMessage()=Z) {
        ^BDR:25: error: not found: value Z
    if (litMessage()=Z) {
                     ^BDR:28: error: value update is not a member of String
    if (litMessage()=Y) {
        ^BDR:28: error: not found: value Y
    if (litMessage()=Y) {
                     ^BDR:31: error: value update is not a member of String
    if (litMessage()=X) {
        ^BDR:31: error: not found: value X
    if (litMessage()=X) {
                     ^